# dia-backend

./: .dockerignore  .env  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  alembic.ini  dia.db  docker-compose.yml  pyproject.toml  stt_demo.py
alembic/: env.py
alembic/versions/: 167d84d1f0fc_add_notification_settings.py  1907523875a2_initial_migration.py  20250105_0954_63ff594fb831_initial_migration.py  20250105_1002_385bd907fa7b_add_document_and_analysis_models.py  20250105_1011_152406f7d045_update_model_relationships_and_types.py  20250106_1640_a8ec14b9de70_refactored_models.py  20250106_1907_20240105_1000_add_last_login_to_users.py  20250106_1909_60fae0b440e4_add_last_login_to_user_model.py  20250106_2015_71a44d9a5569_add_analysis_result_progress_fields.py  20250107_0114_8fcf32916c7e_update_analysis_result_model.py  20250107_0114_update_analysis_result_model.py  20250107_0115_remove_document_status.py  20250107_0116_add_tags.py  20250107_0117_add_file_hash.py  20250107_0118_add_updated_at.py  20250110_1446_ea9af88e0fc6_initial_migration.py  20250111_0048_17cc31be515d_add_tags_remove_status.py  20250111_0057_0a4de00df048_add_updated_at_to_documents.py  20250111_0059_cc17b40fda28_add_document_status_field_and_index.py  20250111_0842_f889a7128341_remove_status_from_documents.py  20250111_0944_9fc50cbda640_add_document_archival_fields.py  20250111_0958_b918e2772667_add_document_archiving.py  20250111_1809_a7d5e0255f1f_add_document_retention_fields.py  20250113_1249_470047cbbbd3_update_analysis_result_model_with_.py  20250113_1259_ec8acfe1bd99_update_analysis_result_model_with_non_.py  20250114_0656_134cf601cb78_initial_migration_with_granular_.py  20250114_0702_045c395d27d4_update_document_indexes.py  20250114_0703_6a64e9f67fb9_add_missing_analysis_indexes.py  20250215_0647_3b7fd7582895_update_analysis_models_with_registry_.py  20250215_0651_f0fbc78ad602_update_analysis_models_for_registry_.py  20250215_0719_ad603fe11c61_fix_analysis_models_schema.py  20250215_0721_0e80a9ff2730_fix_analysis_steps_is_active_nullable.py  20250215_0723_0ae2ebf08b71_fix_remaining_is_active_nullability.py  20250216_1254_ef408e52d553_check_model_alignment.py  20250222_1812_556c5aecc119_update_analysis_models_and_relationships.py  20250223_0923_2399cd3a4b68_initial_schema.py  20250228_2210_1c284fc4cd66_update_analysis_execution_models.py
app/: exceptions.py  main.py
app/admin/: __init__.py  auth.py  base.py  setup.py
app/analysis/: __init__.py
app/api/: deps.py
app/core/: admin.py  analysis.py  auth.py  config.py  logging_conf.py  logging_config.py  security.py
app/crud/: base.py  crud_analysis.py  crud_analysis_config.py  (+5 more)
scripts/: test_table_detection.py
tests/: draw_bbox.py  test_table_detection.py
(+125 files in other folders)
