[tool.poetry]
name = "dia-backend"
version = "0.1.0"
description = "Document Intelligence Analysis Backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
email-validator = "^2.1.0.post1"
aiosqlite = "^0.19.0"
greenlet = "^3.0.1"
python-magic = "^0.4.27"
aiofiles = "^23.2.1"
PyMuPDF = "^1.23.6"
python-docx = "^1.0.1"
openpyxl = "^3.1.2"
Pillow = "^10.1.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
